adding remove option to word consolidation funciton

--- a/030.Violation_Text_Clustering.ipynb
+++ b/030.Violation_Text_Clustering.ipynb
@@ -10,9 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+      "  import pandas.util.testing as tm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -169,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,11 +187,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def consolidate_words(textlist, n = 1, thresh = .8, nlp = None, replace = False, manual_spellcheck = False):\n",
+    "def consolidate_words(textlist, \n",
+    "                      n = 1, \n",
+    "                      thresh = .8, \n",
+    "                      nlp = None, \n",
+    "                      replace = False, \n",
+    "                      manual_spellcheck = False, \n",
+    "                      remove = False):\n",
     "    '''\n",
     "    Takes a list of texts to run iteration\n",
     "    Change word that occurs only once to similar word in the text\n",
@@ -220,6 +235,8 @@
     "                    continue\n",
     "                else:\n",
     "                    replacement_dict[word] = ans\n",
+    "            if remove: \n",
+    "                replacement_dict[word] = ''\n",
     "            else:\n",
     "                continue\n",
     "    \n",
@@ -240,415 +257,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:26: UserWarning: [W008] Evaluating Doc.similarity based on empty vectors.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "paying to pay\n",
-      "endanger to endangering\n",
-      "focused to focus\n",
-      "dogs to dog\n",
-      "pattern to patterns\n",
-      "flanges to flange\n",
-      "districts to district\n",
-      "thirty to fifty\n",
-      "prevents to preventing\n",
-      "sleds to sled\n",
-      "growing to grow\n",
-      "horses to horse\n",
-      "deceit to deception\n",
-      "automobiles to automobile\n",
-      "charges to charged\n",
-      "wanted to did\n",
-      "drink to drinking\n",
-      "prohibits to prohibiting\n",
-      "comme to fait\n",
-      "dallas to houston\n",
-      "finishing to finished\n",
-      "awards to award\n",
-      "strobes to strobe\n",
-      "axles to axle\n",
-      "slowed to slowing\n",
-      "staying to stay\n",
-      "wagering to gambling\n",
-      "wyoming to idaho\n",
-      "tennessee to arkansas\n",
-      "gold to silver\n",
-      "boston to chicago\n",
-      "forget to remember\n",
-      "they to have\n",
-      "lists to list\n",
-      "couldn to didn\n",
-      "chips to chip\n",
-      "arrested to arrest\n",
-      "garbage to trash\n",
-      "few to several\n",
-      "even to but\n",
-      "husband to wife\n",
-      "promises to promise\n",
-      "ever to never\n",
-      "probs to prob\n",
-      "brothers to brother\n",
-      "interior to exterior\n",
-      "early to late\n",
-      "depressants to depressant\n",
-      "responsibilty to responsiblity\n",
-      "exessive to excesive\n",
-      "though to but\n",
-      "mutliple to mutiple\n",
-      "trains to train\n",
-      "horizontally to vertically\n",
-      "ive to ve\n",
-      "cotrol to conrol\n",
-      "zolpidem to alprazolam\n",
-      "islands to island\n",
-      "qualifications to qualification\n",
-      "locking to lock\n",
-      "assemblies to assembly\n",
-      "times] to ]\n",
-      "securty to secuirty\n",
-      "continuos to continous\n",
-      "conditons to condtions\n",
-      "got to getting\n",
-      "there to but\n",
-      "babies to baby\n",
-      "burned to burnt\n",
-      "neither to nor\n",
-      "safty to saftey\n",
-      "fled to fleeing\n",
-      "northbound to eastbound\n",
-      "thought to did\n",
-      "eat to eating\n",
-      "sets to set\n",
-      "applications to application\n",
-      "whisky to whiskey\n",
-      "diazepam to alprazolam\n",
-      "talk to talking\n",
-      "motors to motor\n",
-      "mississippi to alabama\n",
-      "copies to copy\n",
-      "aproach to approch\n",
-      "calif to bakersfield\n",
-      "maintance to maintence\n",
-      "modesto to bakersfield\n",
-      "labels to label\n",
-      "duplicates to duplicate\n",
-      "jacksonville to tulsa\n",
-      "detroit to chicago\n",
-      "lubbock to bakersfield\n",
-      "began to started\n",
-      "leaks to leak\n",
-      "officials to authorities\n",
-      "stainless to steel\n",
-      "grandson to son\n",
-      "michael to jackson\n",
-      "took to went\n",
-      "intentional to deliberate\n",
-      "simulating to simulate\n",
-      "utah to idaho\n",
-      "pill to pills\n",
-      "groups to group\n",
-      "warnings to warning\n",
-      "think to know\n",
-      "exempted to exempt\n",
-      "rentals to rental\n",
-      "what to how\n",
-      "pleae to plese\n",
-      "presciption to perscription\n",
-      "casino to gambling\n",
-      "wasnt to nt\n",
-      "harrasment to harrassment\n",
-      "catching to catch\n",
-      "playing to play\n",
-      "exemptions to exemption\n",
-      "requested to request\n",
-      "once to again\n",
-      "waiting to wait\n",
-      "untill to till\n",
-      "mantain to maintian\n",
-      "tramadol to hydrocodone\n",
-      "traveld to travled\n",
-      "dimensions to dimension\n",
-      "camaro to mustang\n",
-      "assult to assualt\n",
-      "ammunition to ammo\n",
-      "committing to commit\n",
-      "circumstance to circumstances\n",
-      "oxycodone to hydrocodone\n",
-      "displays to display\n",
-      "taxes to tax\n",
-      "evansville to topeka\n",
-      "remark to remarks\n",
-      "seattle to washington\n",
-      "carrollton to clarksville\n",
-      "oxnard to bakersfield\n",
-      "portland to oregon\n",
-      "indianapolis to indiana\n",
-      "containers to container\n",
-      "waco to tulsa\n",
-      "moose to deer\n",
-      "louisville to kentucky\n",
-      "aggrivated to aggrevated\n",
-      "faster to slower\n",
-      "adjacent to adjoining\n",
-      "repairs to repair\n",
-      "skateboarding to skateboard\n",
-      "emblems to emblem\n",
-      "manufacturers to manufacturer\n",
-      "identities to identity\n"
-     ]
-    }
-   ],
-   "source": [
-    "new_tmp = consolidate_words(tmp, nlp = nlp, replace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:26: UserWarning: [W008] Evaluating Doc.similarity based on empty vectors.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "require to requires\n",
-      "arizona to colorado\n",
-      "refusing to refused\n",
-      "higher to lower\n",
-      "bars to bar\n",
-      "small to large\n",
-      "keeping to keep\n",
-      "paths to path\n",
-      "lots to lot\n",
-      "fees to fee\n",
-      "attend to attended\n",
-      "flags to flag\n",
-      "provision to provisions\n",
-      "stations to station\n",
-      "exceptions to exception\n",
-      "fight to fighting\n",
-      "motorbike to motorcycle\n",
-      "scooters to scooter\n",
-      "parks to park\n",
-      "milage to mileage\n",
-      "connection to connections\n",
-      "skateboard to skateboards\n",
-      "placards to placard\n",
-      "sidewalks to sidewalk\n",
-      "crime to crimes\n",
-      "indicated to indicate\n",
-      "responsibilities to responsibility\n",
-      "signaling to signalling\n",
-      "rent to rental\n",
-      "permanent to temporary\n",
-      "sending to send\n",
-      "gates to gate\n",
-      "then to when\n",
-      "exercising to exercise\n",
-      "riders to rider\n",
-      "routes to route\n",
-      "introducing to introduce\n",
-      "misdemeanors to felonies\n",
-      "so to too\n",
-      "robbery to burglary\n",
-      "felonies to misdemeanors\n",
-      "intention to intent\n",
-      "seats to seat\n",
-      "buying to purchasing\n",
-      "causes to cause\n",
-      "approval to approved\n",
-      "lbs] to lbs\n",
-      "controls to control\n",
-      "plants to plant\n",
-      "paid to pay\n",
-      "chemical to chemicals\n",
-      "orange to yellow\n",
-      "travelling to traveling\n",
-      "will to be\n",
-      "winds to wind\n",
-      "came to had\n",
-      "ass to butt\n",
-      "nothing to but\n",
-      "names to name\n",
-      "obsolete to outdated\n",
-      "trail to trails\n",
-      "cat to dog\n",
-      "prohibiting to prohibit\n",
-      "oversized to oversize\n",
-      "fact to that\n",
-      "lands to land\n",
-      "purple to blue\n",
-      "penalties to penalty\n",
-      "oklahoma to missouri\n",
-      "pistol to rifle\n",
-      "houston to tx\n",
-      "colors to color\n",
-      "putting to put\n",
-      "weigh to weighing\n",
-      "cones to cone\n",
-      "firearms to firearm\n",
-      "east to west\n",
-      "limiting to restricting\n",
-      "locks to lock\n",
-      "employees to employee\n",
-      "else to if\n",
-      "wisconsin to minnesota\n",
-      "michigan to minnesota\n",
-      "ago to months\n",
-      "daughter to son\n",
-      "kansas to missouri\n",
-      "follwoing to folowing\n",
-      "idaho to colorado\n",
-      "arkansas to missouri\n",
-      "oregon to iowa\n",
-      "ohio to illinois\n",
-      "hydrocodone to codeine\n",
-      "just to it\n",
-      "he to him\n",
-      "forms to form\n",
-      "yet to but\n",
-      "addresses to address\n",
-      "better to good\n",
-      "you to sure\n",
-      "chicago to illinois\n",
-      "could to should\n",
-      "very to too\n",
-      "tell to know\n",
-      "allows to allow\n",
-      "detectors to detector\n",
-      "shows to show\n",
-      "losing to lost\n",
-      "kids to children\n",
-      "ear to ears\n",
-      "going to go\n",
-      "denver to colorado\n",
-      "expires to expire\n",
-      "several to many\n",
-      "been to being\n",
-      "girls to girl\n",
-      "toyota to nissan\n",
-      "would to should\n",
-      "already to still\n",
-      "wiper to wipers\n",
-      "incorrectly to correctly\n",
-      "wires to wire\n",
-      "payments to payment\n",
-      "alabama to kentucky\n",
-      "switching to switch\n",
-      "markers to marker\n",
-      "pontiac to buick\n",
-      "chevy to ford\n",
-      "york to ny\n",
-      "buses to bus\n",
-      "pipes to pipe\n",
-      "flap to flaps\n",
-      "withdrawl to withdrawls\n",
-      "communications to communication\n",
-      "carriers to carrier\n",
-      "acual to actaul\n",
-      "traps to trap\n",
-      "methods to method\n",
-      "follwing to folowing\n",
-      "getting to get\n",
-      "perscription to prescription\n",
-      "clocks to clock\n",
-      "fifth to fourth\n",
-      "inspections to inspection\n",
-      "straps to strap\n",
-      "seven to five\n",
-      "posess to posses\n",
-      "cannot to can\n",
-      "decals to decal\n",
-      "pursue to pursuing\n",
-      "actually to still\n",
-      "rx to prescription\n",
-      "brackets to bracket\n",
-      "fraudlent to fradulent\n",
-      "cant to nt\n",
-      "dont to nt\n",
-      "february to january\n",
-      "violent to violence\n",
-      "wore to wearing\n",
-      "injuries to injury\n",
-      "south to west\n",
-      "medications to drugs\n",
-      "dakota to nebraska\n",
-      "maintaining to maintain\n",
-      "numerous to many\n",
-      "great to good\n",
-      "services to service\n",
-      "books to book\n",
-      "sections to section\n",
-      "dividers to divider\n",
-      "north to west\n",
-      "carolina to nc\n",
-      "georgia to nc\n",
-      "bottles to bottle\n",
-      "won to win\n",
-      "six to five\n",
-      "nine to five\n",
-      "always to never\n",
-      "works to work\n",
-      "picture to photo\n",
-      "acquiring to acquire\n",
-      "bikes to bike\n",
-      "exceeds to exceed\n",
-      "virginia to kentucky\n",
-      "didnt to nt\n",
-      "charger to battery\n",
-      "blocks to block\n",
-      "parties to party\n",
-      "headset to headsets\n",
-      "objects to object\n",
-      "benefits to benefit\n",
-      "contain to contains\n",
-      "amphetamines to amphetamine\n",
-      "tests to test\n"
-     ]
-    }
-   ],
-   "source": [
-    "# running one more\n",
-    "new_tmp2 = consolidate_words(new_tmp, n = 10, nlp = nlp, replace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['violations'] = new_tmp2"
+    "violations = consolidate_words(tmp, n = 50, nlp = nlp, replace = True, remove = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"DATA/text_clean.txt\", \"wb\") as filepath:\n",
-    "    pickle.dump(df.violations.values, filepath)"
+    "    pickle.dump(violations, filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"DATA/text_clean.txt\", \"rb\") as filepath:\n",
+    "    violations = pickle.load(filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:32: UserWarning: [W008] Evaluating Doc.similarity based on empty vectors.\n"
+     ]
+    }
+   ],
+   "source": [
+    "violations = consolidate_words(violations, n = 50, nlp = nlp, replace = True, remove = True)"
    ]
   },
   {
@@ -660,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,28 +334,6 @@
    "outputs": [],
    "source": [
     "df['violations'] = df.violations.apply(lambda x: [wnl.lemmatize(word) for word in x.split()])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "EOFError",
-     "evalue": "Ran out of input",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mEOFError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-60592365fa36>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"DATA/text_clean.txt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfilepath\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mEOFError\u001b[0m: Ran out of input"
-     ]
-    }
-   ],
-   "source": [
-    "#with open(\"DATA/text_clean.txt\", \"rb\") as filepath:\n",
-    "#    df.violations = pickle.load(filepath)"
    ]
   },
   {
