separated replace function

--- a/030.Violation_Text_Clustering.ipynb
+++ b/030.Violation_Text_Clustering.ipynb
@@ -187,7 +187,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def replace_texts(list_of_text, replacement_dict):\n",
+    "    for i, text in enumerate(list_of_text):\n",
+    "        text = text.split()\n",
+    "        for j, te in enumerate(text):\n",
+    "            if te in replacement_dict: \n",
+    "                text[j] = replacement_dict[te]\n",
+    "        list_of_text[i] = ' '.join(text)\n",
+    "    return list_of_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,14 +257,7 @@
     "                continue\n",
     "    \n",
     "    if replace:\n",
-    "        for i, text in enumerate(list_of_text):\n",
-    "\n",
-    "            text = text.split()\n",
-    "            for j, te in enumerate(text):\n",
-    "                if te in replacement_dict: \n",
-    "                    text[j] = replacement_dict[te]\n",
-    "            list_of_text[i] = ' '.join(text)\n",
-    "\n",
+    "        list_of_text = replace_texts(list_of_text, replacement_dict)\n",
     "        return list_of_text\n",
     "    \n",
     "    else:\n",
@@ -266,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,11 +338,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['violations'] = df.violations.apply(lambda x: [wnl.lemmatize(word) for word in x.split()])"
+    "wordcounts = Counter(' '.join(violations).split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "replace_dict = {}\n",
+    "for k in wordcounts.keys():\n",
+    "    rep = wnl.lemmatize(k)\n",
+    "    if rep != k: \n",
+    "        replace_dict[k] = wnl.lemmatize(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "violations = replace_texts(violations, replace_dict)"
    ]
   },
   {
