adding sampling from clusters

--- a/030.Violation_Text_Clustering.ipynb
+++ b/030.Violation_Text_Clustering.ipynb
@@ -7611,8 +7611,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One cluster is visib"
+    "Let's see how individual clusters are like."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = pd.DataFrame(zip(unique_vecs.index, pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Samples from each cluster\n",
+      "opr, fst, sig, beh, fa, emr, inj, fac, eb, jan\n",
+      "\n",
+      "headset, curb, driver, pattern, drove, white, near, lens, equiped, craft\n",
+      "\n",
+      "follow, personal, unregistered, receipt, prove, give, governing, activity, newer, restriction\n",
+      "\n",
+      "unlawful, serious, barred, intoxicating, disorderly, abuse, impede, summons, gun, flee\n",
+      "\n",
+      "beam, liquor, ounce, steady, hazard, motorized, aircraft, rail, phone, opiate\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Samples from each cluster')\n",
+    "print(', '.join(list(tmp[tmp[1] == 0][0].sample(10))), end = '\\n\\n')\n",
+    "print(', '.join(list(tmp[tmp[1] == 1][0].sample(10))), end = '\\n\\n')\n",
+    "print(', '.join(list(tmp[tmp[1] == 2][0].sample(10))), end = '\\n\\n')\n",
+    "print(', '.join(list(tmp[tmp[1] == 3][0].sample(10))), end = '\\n\\n')\n",
+    "print(', '.join(list(tmp[tmp[1] == 4][0].sample(10))), end = '\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is picking up the abbreviations (0), and the violation related vocabularies (3), but not a clear pattern within violations. Let's look at the overall sentence clusters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
