adding document-based vectors

--- a/030.Violation_Text_Clustering.ipynb
+++ b/030.Violation_Text_Clustering.ipynb
@@ -499,7 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hierarchical Agglomerative Clustering\n",
+    "#### Hierarchical Agglomerative Clustering\n",
     "Here I'll use HAC."
    ]
   },
@@ -7660,6 +7660,55 @@
    "metadata": {},
    "source": [
     "It is picking up the abbreviations (0), and the violation related vocabularies (3), but not a clear pattern within violations. Let's look at the overall sentence clusters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Document based clustering\n",
+    "Now I'll get the average vector of each sentence and cluster documents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "violations_vecs = pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for docs in violations:\n",
+    "    vecs = get_vectors(word)\n",
+    "    if vecs is not np.nan:\n",
+    "        violations_vecs[docs] = vecs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "unique_vecs = unique_vecs.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "violations_vecs"
    ]
   },
   {
