changing to np array instead of pandas

--- a/030.Violation_Text_Clustering.ipynb
+++ b/030.Violation_Text_Clustering.ipynb
@@ -7672,43 +7672,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "violations_vecs = pd.DataFrame()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "violations_vecs = np.empty((300,1))\n",
+    "\n",
     "for docs in violations:\n",
-    "    vecs = get_vectors(word)\n",
-    "    if vecs is not np.nan:\n",
-    "        violations_vecs[docs] = vecs"
+    "    vecs = get_vectors(docs)\n",
+    "    try:\n",
+    "        violations_vecs = np.concatenate((violations_vecs, vecs.reshape((300,1))), axis = 1)\n",
+    "    except AttributeError: \n",
+    "        violations_vecs = np.concatenate((violations_vecs, np.zeros((300,1))), axis = 1)\n",
+    "violations_vecs = violations_vecs[:, 1:]    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "unique_vecs = unique_vecs.transpose()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 243,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(300, 14)"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "violations_vecs"
+    "violations_vecs.shape"
    ]
   },
   {
