updated consolidation function

--- a/030.Violation_Text_Clustering.ipynb
+++ b/030.Violation_Text_Clustering.ipynb
@@ -10,9 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+      "  import pandas.util.testing as tm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -204,13 +213,23 @@
     "                      n = 1, \n",
     "                      thresh = .8, \n",
     "                      nlp = None, \n",
-    "                      replace = False, \n",
-    "                      manual_spellcheck = False, \n",
-    "                      remove = False):\n",
+    "                      replace = False, # if true \n",
+    "                      remove = False, \n",
+    "                      verbose = True):\n",
     "    '''\n",
-    "    Takes a list of texts to run iteration\n",
-    "    Change word that occurs only once to similar word in the text\n",
-    "    Return consolidated list \n",
+    "    Takes a list of texts and change words that occur \n",
+    "    n times or less to similar word in the text\n",
+    "    Return a new list or a replacement dictionary\n",
+    "    Requires Spacy\n",
+    "    \n",
+    "    Keyword arguments:\n",
+    "    textlist -- an array of texts\n",
+    "    n        -- int, maximum occurrence to replace or remove (default = 1)\n",
+    "    thresh   -- float (0 < thresh < 1), minimum similarity required to replace (default = .8)\n",
+    "    nlp      -- Spacy module, if none uses en_core_web_lg from Spacy (default = None)\n",
+    "    replace  -- if true, it returns a new textlist, or it returns a replacement dictionary\n",
+    "    remove   -- if true, it removes the low-occurrence words if there's no replacement\n",
+    "    verbose  -- if True, returns all word changes (default True))\n",
     "    '''\n",
     "    if nlp == None:\n",
     "        nlp = en_core_web_lg.load()\n",
@@ -218,37 +237,38 @@
     "    list_of_text = textlist.copy()\n",
     "    \n",
     "    wordcounts = Counter(' '.join(list_of_text).split())    \n",
-    "    words_once = [k for k, v in wordcounts.items() if v <= n]\n",
+    "    low_words = [k for k, v in wordcounts.items() if v <= n]\n",
     "    other_words = [k for k, v in wordcounts.items() if v > n]\n",
     "    \n",
     "    tokens = nlp(' '.join(other_words))\n",
+    "    \n",
     "    replacement_dict = {}\n",
     "    \n",
-    "    for word in words_once:\n",
+    "    for word in low_words:\n",
     "\n",
     "        word_token = nlp(word)\n",
     "        max_similarity = thresh\n",
     "\n",
     "        for tk in tokens:\n",
     "            # find the maximum similarity above threshold\n",
-    "            sim_score = word_token.text, tk.text, word_token.similarity(tk)\n",
-    "            if 1 > sim_score[2] > max_similarity:\n",
-    "                replacement_dict[word] = sim_score[1]\n",
-    "                max_similarity = sim_score[2]\n",
+    "            sim_score = word_token.similarity(tk)\n",
+    "\n",
+    "            if 1 > sim_score > max_similarity:\n",
+    "                replacement_dict[word] = tk.text\n",
+    "                max_similarity = sim_score\n",
+    "                            \n",
     "        try:\n",
-    "            print(word, 'to', replacement_dict[word])\n",
+    "            if verbose: \n",
+    "                print(word, '->', replacement_dict[word])\n",
+    "            else: \n",
+    "                continue\n",
+    "                \n",
     "        except KeyError:\n",
-    "            if manual_spellcheck:\n",
-    "                ans = input(f'{word} does not have a replacement. If you have a suggesion, type the word, otherwise press spacebar')\n",
-    "                if ans == ' ':\n",
-    "                    continue\n",
-    "                else:\n",
-    "                    replacement_dict[word] = ans\n",
     "            if remove: \n",
     "                replacement_dict[word] = ''\n",
     "            else:\n",
     "                continue\n",
-    "    \n",
+    "\n",
     "    if replace:\n",
     "        list_of_text = replace_texts(list_of_text, replacement_dict)\n",
     "        return list_of_text\n",
@@ -278,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7676,6 +7696,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# todo - break it out \n",
     "violations_vecs = np.empty((300,1))\n",
     "\n",
     "for docs in violations:\n",
@@ -7748,5 +7769,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
