--- a/030.Violation_Text_Clustering.ipynb
+++ b/030.Violation_Text_Clustering.ipynb
@@ -213,7 +213,7 @@
     "                      n = 1, \n",
     "                      thresh = .8, \n",
     "                      nlp = None, \n",
-    "                      replace = False, # if true \n",
+    "                      replace = False,\n",
     "                      remove = False, \n",
     "                      verbose = True):\n",
     "    '''\n",
