--- a/030.Violation_Text_Clustering.ipynb
+++ b/030.Violation_Text_Clustering.ipynb
@@ -575,134 +575,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some clusters are not decipherable, let's correct them. Then we will cluster based on the average of each document."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result_a = result[result.cluster != 14]\n",
-    "result_a = result[result.cluster != 13]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array(['susp', 'lic', 'fty', 'reqd', 'viol', 'prohib', 'veh', 'imp',\n",
-       "       'inj', 'stopsign', 'phys', 'ped', 'drv', 'bac', 'emerg', 'disp',\n",
-       "       'traf', 'loc', 'proj', 'laned', 'driv', 'agg', 'diplay',\n",
-       "       'pedestrains', 'regis', 'emer', 'respon', 'misd', 'oper', 'priv',\n",
-       "       'lft', 'vio', 'frt', 'cmv', 'csp', 'nontransparent', 'vin',\n",
-       "       'flagman', 'sched', 'maint', 'arrestable', 'reddi', 'fel', 'contr',\n",
-       "       'bef', 'dri', 'lts', 'opr', 'revok', 'yld', 'alch', 'pip', 'chg',\n",
-       "       'prov', 'fld', 'zon', 'bal', 'beh', 'resi', 'pol', 'pres', 'fac',\n",
-       "       'scen', 'unknow', 'hom', 'cty', 'pers', 'intersec', 'unattend',\n",
-       "       'consum', 'alc', 'obscur', 'rcpt', 'circum', 'owi', 'crd', 'cad',\n",
-       "       'ovr', 'spee', 'curent', 'lpl', 'trl', 'pbt', 'fatt', 'carless',\n",
-       "       'ratt', 'plt', 'ndl', 'prf', 'ckd', 'oc', 'indef', 'ife', 'coa',\n",
-       "       'vlt', 'lgt', 'asr', 'fao', 'rect', 'fst', 'ivc', 'engr',\n",
-       "       'hallucinogenics', 'cmb', 'protec', 'adrs'], dtype=object)"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result_a[result.cluster == 17].words.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['stop', 'stopsign', 'stopping', 'stopped']"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[x for x in result_a.words if x.startswith('stop')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "{'susp': 'suspend', 'viol': 'violation', 'prohib': 'prohibit', 'veh': 'vehicle', 'stopsign': 'stop', 'pedestrains': 'pedestrians', \n",
-    "''}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Document based clustering\n",
     "Now I'll get the average vector of each sentence and cluster documents."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# todo - break it out \n",
-    "violations_vecs = np.empty((300,1))\n",
-    "\n",
-    "for docs in violations:\n",
-    "    vecs = get_vectors(docs)\n",
-    "    try:\n",
-    "        violations_vecs = np.concatenate((violations_vecs, vecs.reshape((300,1))), axis = 1)\n",
-    "    except AttributeError: \n",
-    "        violations_vecs = np.concatenate((violations_vecs, np.zeros((300,1))), axis = 1)\n",
-    "violations_vecs = violations_vecs[:, 1:]    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(300, 14)"
+       "array(['noise after to am', 'no proof of insurance',\n",
+       "       'speed not ftc speed to avoid', ..., 'er rt rk', 'sp fo rk sp',\n",
+       "       'rk rt rk'], dtype=object)"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "violations_vecs.shape"
+    "violations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_doc_avg(doc):\n",
+    "    vecs = []\n",
+    "    for word in doc.split():\n",
+    "        if word in words: \n",
+    "            vec = unique_vecs.loc[word].values\n",
+    "            vecs.append(vec)\n",
+    "    if vecs:\n",
+    "        return np.mean(vecs, axis = 0)\n",
+    "    else:\n",
+    "        return np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc_avg = [get_doc_avg(x) for x in violations]"
    ]
   },
   {
