update doc vector verage function

--- a/030.Violation_Text_Clustering.ipynb
+++ b/030.Violation_Text_Clustering.ipynb
@@ -581,29 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['noise after to am', 'no proof of insurance',\n",
-       "       'speed not ftc speed to avoid', ..., 'er rt rk', 'sp fo rk sp',\n",
-       "       'rk rt rk'], dtype=object)"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "violations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,18 +592,44 @@
     "            vec = unique_vecs.loc[word].values\n",
     "            vecs.append(vec)\n",
     "    if vecs:\n",
-    "        return np.mean(vecs, axis = 0)\n",
+    "        return list(np.mean(vecs, axis = 0))\n",
     "    else:\n",
     "        return np.nan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc_avg = [get_doc_avg(x) for x in violations]"
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 ...1000 ...2000 ..."
+     ]
+    }
+   ],
+   "source": [
+    "counts = []\n",
+    "doc_avg = []\n",
+    "\n",
+    "for i, x in enumerate(violations):\n",
+    "    counts.append(i)\n",
+    "    doc_avg.append(get_doc_avg(x))\n",
+    "    if i % 1000 == 0: \n",
+    "        print(i, '...', end = '')\n",
+    "        joblib.dump(doc_avg, 'PKL/doc_avg')\n",
+    "    "
    ]
   },
   {
